libdsk (1.5.9+dfsg-1cpm4l1) UNRELEASED; urgency=low

  * UNRELEASED
  * debian/control: Updated maintainer fields for CPM4L's github place.
  * debian/control: Updated vcs fields for CPM4L's github place.
  * debian/{control,rules}: Downgrade to support oldstable systems.
  * debian/{control,install,patches}: Exclude native Windows API on Gygwin
    and provide pkgconfig file.
  * debian/{control,patches}: Fixes build with automake >= 1.13. Replace
    deprecated AM_CONFIG_HEADER with AC_CONFIG_HEADERS.
  * debian/{control,patches}: Fixes Java Doc issues and JAR install place.
  * debian/{control,patches}: Fixes location of system-wide format list
    in manpage.
  * debian/{control,patches}: Export missing default format number in JNI.
  * debian/{control,patches}: Add Robotron SCP format definitions.
  * debian/{libdsk-utils}: Add binary and manpage for new disk converter.
  * debian/{libdsk-utils}: Add missing manpage about the format list file.

 --

libdsk (1.5.9+dfsg-1) unstable; urgency=medium

  * New upstream version.
    + Adds support for SAP format.
      + Update symbols file for that.
  * Bump Standards-Version (no changes needed).
  * Mark libdsk4 Multi-Arch: same.
  * Make build reproducible by stripping dates from PDF documentation.

 -- Dominik George <natureshadow@debian.org>  Sat, 01 Dec 2018 12:35:06 +0100

libdsk (1.5.4+dfsg-1) unstable; urgency=low

  * Initial release (Closes: #168591)

 -- Dominik George <natureshadow@debian.org>  Mon, 26 Mar 2018 15:06:08 +0200