@@ -2,12 +2,12 @@
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
  <head>
-  <title>LibDsk v1.5.4 Documentation Index</title>
+  <title>LibDsk v1.5.9 Documentation Index</title>
  </head>
  <body>
-  <h1>LibDsk v1.5.4 Documentation Index</h1>
+  <h1>LibDsk v1.5.9 Documentation Index</h1>
   <ul>
-   <li><a href="libdsk.html">LibDsk main documentation</a></li>
+   <li><a href="libdsk.xhtml">LibDsk main documentation</a></li>
    <li><a href="apridisk.html">ApriDisk format documentation</a></li>
    <li><a href="cfi.html">CFI format documentation</a></li>
    <li><a href="ldbs.html">LDBS format documentation</a></li>
