@@ -1,5 +1,5 @@
 Document: libdsk
-Title: LibDsk v1.5.4
+Title: LibDsk v1.5.9
 Author: John Elliott
 Abstract: LibDsk is a library intended to give transparent access to floppy
  drives and to the “disc image files” used by emulators to
