@@ -15,6 +15,7 @@ libdsk (1.5.9+dfsg-1cpm4l1) UNRELEASED; urgency=low
   * debian/{control,patches}: Add Robotron SCP format definitions.
   * debian/{libdsk-utils}: Add binary and manpage for new disk converter.
   * debian/{libdsk-utils}: Add missing manpage about the format list file.
+  * debian/{libdsk-utils}: Upgrade package version for doc-base.
 
  --
 
